Implement authentication service with JWT support, including user registration and login functionality

--- a/auth-service/src/main/resources/application.properties
+++ b/auth-service/src/main/resources/application.properties
@@ -1,7 +1,13 @@
 spring.application.name=auth-service
 
 server.port=8081
-spring.data.mongodb.uri=${SPRING_DATA_MONGODB_URI:mongodb://localhost:27017/authdb}
+spring.data.mongodb.uri=mongodb://localhost:27017/authdb
+spring.data.mongodb.database=authdb
+
+security.jwt.secret=${JWT_SECRET:Z7L+U7qZ7hem3u9IsLs+fpb0uiO4viiFY5P7cXiIXLk=}
+security.jwt.access-token-minutes=${JWT_ACCESS_MINUTES:60}
 
 management.endpoints.web.exposure.include=health,info
+logging.level.org.springframework.data.mongodb=DEBUG
+logging.level.org.mongodb.driver=INFO
 
